# starmap-engine

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  MCP.json  README.md
.github/: COPILOT_INSTRUCTIONS.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy.yml
src/: lib.rs  main.rs
src/data/: mod.rs
src/graph/: graph.rs  mod.rs  pathfinder.rs
src/spatial/: kd_tree.rs
src/sweep/: mod.rs  sweep.rs
tests/: integration_tests.rs
