[package]
name = "starmap_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "starmap_engine"
path = "src/lib.rs"

[[bin]]
name = "starmap_lambda"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
once_cell = "1.19"
anyhow = "1.0"
thiserror = "1.0"
lambda_runtime = "0.11"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
log = "0.4"
env_logger = "0.11"
zstd = "0.13"

[dev-dependencies]
assert_approx_eq = "1.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rusqlite = { version = "0.29", features = ["bundled"] }
tempfile = "3.10"
